# ObjDetection

./: CMakeLists.txt  main.cpp
Config/: Config.xml
DBModule/include/: DBModule.hpp  ObjectProperties.hpp
DBModule/src/: DBModule.cpp  ObjectProperties.cpp
FeatureExtraction/include/: FeatureExtractor.hpp
FeatureExtraction/src/: FeatureExtractor.cpp
FeatureMatch/include/: FeatureMatcher.hpp
FeatureMatch/src/: FeatureMatcher.cpp
ProjectProperty/include/: Config.hpp  ConfigEntry.hpp  ProjectProperty.hpp
ProjectProperty/src/: Config.cpp  ConfigEntry.cpp
testModule/: CMakeLists.txt  testConfig.cpp  testDBModule.cpp  testFeature.cpp  testFeatureMatch.cpp
